--- a/static/css/inettus/inettuts.css
+++ b/static/css/inettus/inettuts.css
@@ -89,7 +89,7 @@ a {color:white;}
     font-size: 12px;
 }
 #columns .widget .widget-content ul {
-    padding: 5px 0 5px 20px;
+    /*padding: 5px 0 5px 20px;*/
     list-style: disc;
 }
 #columns .widget .widget-content ul li {padding: 3px 0;}
