--- a/templates/widgets/agent/agentstree.html
+++ b/templates/widgets/agent/agentstree.html
@@ -3,39 +3,6 @@
 {% block widget-content %}
 <script>
 
-	function getExecutionForm(agent, action) {
-		url = '/agent/action/get_dialog_form/'+agent+'/'+action+'/';
-		$.ajax({
-			// The link we are accessing.
-			url : url,
-			// The type of request.
-			type : "get",
-			// The type of data that is getting returned.
-			dataType : "html",
-			error : function() {
-				//TODO: Show error message
-				//$('#loading').hide();
-				alert('error');
-			},
-			beforeSend : function() {
-				//$('#loading').show();
-			},
-			complete : function() {
-				//$('#loading').hide();
-			},
-			success : function(data) {
-				if (data!='None') {
-					$("#execution-dialog").html(data);
-					$("#execution-dialog").dialog({modal: true, title: agent+'-'+action+' execution...', minHeight: 200, minWidth: 500});
-					$("#execution-dialog").show();
-				} else {
-					callMcollective('/restapi/mcollective/no-filter/'+agent+'/'+action+'/', 'response-container'); 
-				}
-				
-			}
-		});
-	}
-
 	$(document).ready(function() {
 		$("#execution-dialog").hide();
 		$("#agentstree").dynatree({
@@ -46,7 +13,7 @@
 			},
 			autoFocus : false, // Set focus to first child, when expanding or lazy-loading.
 			onCreate: function(node, span){
-				bindContextMenu(span);
+				//bindContextMenu(span);
       		},
 			initAjax : {
 				url : "/agent/action/get_action_tree/",
@@ -94,7 +61,7 @@
 			onClick : function(node, event) {
 				logMsg("onClick(%o, %o)", node, event);
 				if (node.data.isFolder == false) {
-					getExecutionForm(node.data.agent, node.data.key);	
+					getExecutionForm("execution-dialog", node.data.agent, node.data.key, "no-filter",  "response-container");	
 				}
 			},
 			onDblClick : function(node, event) {
