Added collapsible panel on mcoll response Added to to RPM

--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -23,6 +23,9 @@
 		<link href="{{STATIC_URL}}css/jeegoocontext/style.css" rel="stylesheet" type="text/css" />
 		<link href="{{STATIC_URL}}css/jeegoocontext/skins/cm_default/style.css" rel="Stylesheet" type="text/css" />
 		
+		<!-- Collapsible Panel-->
+		<link href="{{STATIC_URL}}css/jquery-collapsible-panel/diQuery-collapsiblePanel.css" rel="Stylesheet" type="text/css" />
+		
 		<link href="{{STATIC_URL}}css/kermit/kermit-skin-default.css" rel="stylesheet" type="text/css" />
 		{% endblock %} <!-- EXTRASTYLES -->
 		{% block extrastyle %}{% endblock %} <!-- JAVASCRIPTS -->
@@ -37,6 +40,8 @@
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-cookie/jquery.cookie.js"></script>
 		<!-- JQuery Context Menu-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jeegoocontext/jquery.jeegoocontext.js"></script>
+		<!-- Collapsible Panel-->
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-collapsible-panel/diQuery-collapsiblePanel.js"></script>
 		
 		<!-- Kermit Scripts-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/kermit/kermit.js"></script>
