--- a/templates/agents/default.html
+++ b/templates/agents/default.html
@@ -1,11 +1,18 @@
-<h3>Response from {{agent}} - {{action}}</h3>
+{% load i18n %}
+
+<script>
+	$(document).ready(function() {
+        $(".collapsibleContainer").collapsiblePanel();
+    });
+</script>
+
+<h3>{% trans 'Response from'%} {{agent}} - {{action}}</h3>
 {% for resp in content %}
-	<div style="padding: 5px">
-		<img src="{{settings.STATIC_URL}}images/icons/Platform_up_16.png" style="margin-right: 10px"/><strong>{{resp.sender}}</strong>
+	<div class="collapsibleContainer" title="{{resp.sender}}" closed="{% if forloop.first %}false{% else %}true{% endif %}">
 		{% if resp.statuscode == 0 %}
-			<img src="{{settings.STATIC_URL}}images/icons/ok.png" style="height: 16px;"/>
+			<span>{% trans 'Response status'%}: <img src="{{settings.STATIC_URL}}images/icons/ok.png" style="height: 16px;"/></span>
 		{% else %}
-			<img src="{{settings.STATIC_URL}}images/icons/ko.png" style="height: 16px;"/> {{resp.statusmsg}}
+			<span>{% trans 'Response status'%}: <img src="{{settings.STATIC_URL}}images/icons/ko.png" style="height: 16px;"/> {{resp.statusmsg}}</span>
 		{% endif %} 
 		<div class="infohighlight">
 		{% for content,data in resp.data.items %}
