--- a/templates/agents/service/status.html
+++ b/templates/agents/service/status.html
@@ -4,9 +4,9 @@
 	<span>
 		<img src="{{settings.STATIC_URL}}images/icons/Platform_up_16.png" style="margin-right: 10px"/><strong>{{resp.sender}}</strong>: 
 		{% if resp.data.status == 'running'%}
-			<img src="{{settings.STATIC_URL}}images/icons/online.png"/>&nbsp{{resp.data.status}}
+			<img src="{{settings.STATIC_URL}}images/icons/online.png"/>&nbsp;{{resp.data.status}}
 		{% else %}
-			<img src="{{settings.STATIC_URL}}images/icons/offline.png"/>&nbsp{{resp.data.status}}
+			<img src="{{settings.STATIC_URL}}images/icons/offline.png"/>&nbsp;{{resp.data.status}}
 		{% endif %}
 	</span><br/>
 {% endfor %}
