Refactored all urls to support apps deployed in non-root path Added tests app for SAML2 authentication

--- a/templates/widgets/agent/agentstree.html
+++ b/templates/widgets/agent/agentstree.html
@@ -16,7 +16,7 @@
 				//bindContextMenu(span);
       		},
 			initAjax : {
-				url : "/agent/action/get_action_tree/",
+				url : "{{settings.BASE_URL}}/agent/action/get_action_tree/",
 				data : {
 					mode : "funnyMode"
 				}
