--- a/templates/widgets/serverdetails/serverdetails.html
+++ b/templates/widgets/serverdetails/serverdetails.html
@@ -18,7 +18,7 @@
 				$("#contextualAjaxSpinner").remove();
 			},
 			beforeSend : function() {
-				$(selectedElement).append("<img id='contextualAjaxSpinner' src='/static/images/small-loader.gif'/>");
+				$(selectedElement).append("<img id='contextualAjaxSpinner' src='{{settings.STATIC_URL}}images/small-loader.gif'/>");
 			},
 			complete : function() {
 				$("#contextualAjaxSpinner").remove();
@@ -32,7 +32,7 @@
 	$(document).ready(function() {
 		$("#details-tree").dynatree({
 			title : "Server {{hostname}} Details",
-			imagePath:"/static/images/servertree/",
+			imagePath:"{{settings.STATIC_URL}}images/servertree/",
 			fx : {
 				height : "toggle",
 				duration : 200
@@ -44,7 +44,7 @@
 				//}
       		},
 			initAjax : {
-				url : "/server/tree/{{hostname}}/",
+				url : "{{settings.BASE_URL}}/server/tree/{{hostname}}/",
 				data : {
 					mode : "funnyMode"
 				}
