--- a/static/css/default.css
+++ b/static/css/default.css
@@ -13,49 +13,49 @@
 .dialog_nw {
 	width: 9px;
 	height: 23px;
-	background: transparent url( /static/images/default/top_left.gif ) no-repeat 0 0;
+	background: transparent url( ../../images/default/top_left.gif ) no-repeat 0 0;
 }
 .dialog_n {
-	background: transparent url( /static/images/default/top_mid.gif ) repeat-x 0 0;
+	background: transparent url( ../../images/default/top_mid.gif ) repeat-x 0 0;
 	height: 23px;
 }
 .dialog_ne {
 	width: 9px;
 	height: 23px;
-	background: transparent url( /static/images/default/top_right.gif ) no-repeat 0 0;
+	background: transparent url( ../../images/default/top_right.gif ) no-repeat 0 0;
 }
 .dialog_e {
 	width: 2px;
-	background: transparent url( /static/images/default/center_right.gif ) repeat-y 0 0;
+	background: transparent url( ../../images/default/center_right.gif ) repeat-y 0 0;
 }
 .dialog_w {
 	width: 2px;
-	background: transparent url( /static/images/default/center_left.gif ) repeat-y 0 0;
+	background: transparent url( ../../images/default/center_left.gif ) repeat-y 0 0;
 }
 .dialog_sw {
 	width: 9px;
 	height: 19px;
-	background: transparent url( /static/images/default/bottom_left.gif ) no-repeat 0 0;
+	background: transparent url( ../../images/default/bottom_left.gif ) no-repeat 0 0;
 }
 .dialog_s {
-	background: transparent url( /static/images/default/bottom_mid.gif ) repeat-x 0 0;
+	background: transparent url( ../../images/default/bottom_mid.gif ) repeat-x 0 0;
 	height: 19px;
 }
 .dialog_se {
 	width: 9px;
 	height: 19px;
-	background: transparent url( /static/images/default/bottom_right.gif ) no-repeat 0 0;
+	background: transparent url( ../../images/default/bottom_right.gif ) no-repeat 0 0;
 }
 .dialog_sizer {
 	width: 9px;
 	height: 19px;
-	background: transparent url( /static/images/default/sizer.gif ) no-repeat 0 0;
+	background: transparent url( ../../images/default/sizer.gif ) no-repeat 0 0;
 	cursor: se-resize;
 }
 .dialog_close {
 	width: 14px;
 	height: 14px;
-	background: transparent url( /static/images/default/close.gif ) no-repeat 0 0;
+	background: transparent url( ../../images/default/close.gif ) no-repeat 0 0;
 	position: absolute;
 	top: 5px;
 	left: 8px;
@@ -65,7 +65,7 @@
 .dialog_minimize {
 	width: 14px;
 	height: 15px;
-	background: transparent url( /static/images/default/minimize.gif ) no-repeat 0 0;
+	background: transparent url( ../../images/default/minimize.gif ) no-repeat 0 0;
 	position: absolute;
 	top: 5px;
 	left: 28px;
@@ -75,7 +75,7 @@
 .dialog_maximize {
 	width: 14px;
 	height: 15px;
-	background: transparent url( /static/images/default/maximize.gif ) no-repeat 0 0;
+	background: transparent url( ../../images/default/maximize.gif ) no-repeat 0 0;
 	position: absolute;
 	top: 5px;
 	left: 49px;
