--- a/static/css/inettus/inettuts.js.css
+++ b/static/css/inettus/inettuts.js.css
@@ -3,7 +3,7 @@
 .widget-head a.remove  {
     float: right;
     display: inline;
-    background: url(/static/images/widgets/close.png) no-repeat;
+    background: url(../../images/widgets/close.png) no-repeat;
     width: 24px;
     height: 24px;
     margin: 3px 4px 8px 0;
@@ -14,7 +14,7 @@
 .widget-head a.edit  {
     float: right;
     display: inline;
-    background: url(/static/images/widgets/edit.png) no-repeat;
+    background: url(../../images/widgets/edit.png) no-repeat;
     width: 24px;
     height: 24px;
     text-indent: -9999em;
@@ -26,7 +26,7 @@
 .widget-head a.refresh  {
     float: right;
     display: inline;
-    background: url(/static/images/widgets/refresh.png) no-repeat;
+    background: url(../../images/widgets/refresh.png) no-repeat;
     width: 24px;
     height: 24px;
     text-indent: -9999em;
@@ -37,7 +37,7 @@
 .widget-head a.collapse  {
     float: left;
     display: inline;
-    background: url(/static/images/widgets/expand-collapse.png) no-repeat;
+    background: url(../../images/widgets/expand-collapse.png) no-repeat;
     width: 24px;
     height: 24px;
     text-indent: -9999em;
