--- a/static/css/kermit/loader.css
+++ b/static/css/kermit/loader.css
@@ -9,7 +9,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 99999999;
-	background-image: url("/static/images/transparentbg.png");
+	background-image: url("../../images/transparentbg.png");
 }
 
 #loader {
