--- a/templates/server/details.html
+++ b/templates/server/details.html
@@ -6,7 +6,7 @@
 
 {% block breadcrumbs %}
 <div id="breadcrumbs">
-	<a href="/">{% trans 'Home' %}</a>{% if title %} &rsaquo; {{ title }}{% endif %} <a href="/server/details/{{hostname}}/">{% trans 'Server Details' %} - {{hostname}}</a>
+	<a href="{{settings.BASE_URL}}">{% trans 'Home' %}</a>{% if title %} &rsaquo; {{ title }}{% endif %} <a href="/server/details/{{hostname}}/">{% trans 'Server Details' %} - {{hostname}}</a>
 </div>
 {% endblock %}
 
