--- a/templates/widgets/base_widget.html
+++ b/templates/widgets/base_widget.html
@@ -1,3 +1,4 @@
+<link href="{{settings.STATIC_URL}}css/inettus/inettuts.js.css" rel="stylesheet" type="text/css" />
 <li class="widget color-{%if widget.db_reference.color %}{{widget.db_reference.color}}{% else %}white{% endif %}" id="{{widget.db_reference.name}}" movable="{{widget.db_reference.movable}}" removable="{{widget.db_reference.removable}}" editable="{{widget.db_reference.editable}}" collapsible="{{widget.db_reference.collapsible}}" refreshable="{{widget.db_reference.refreshable}}" refreshUrl="{{widget.db_reference.refreshUrl}}">
 	<div class="widget-head">
 		<h3>{{widget.db_reference.title}} {% block widget-extra-title %}{% endblock %}</h3>
