--- a/templates/theme/kermit/header.html
+++ b/templates/theme/kermit/header.html
@@ -6,7 +6,7 @@
     <div class="admin-title">
     	<img src="{{STATIC_URL}}images/header/kermit_logo.png" height="40px" border="0px"/>
     </div>
-    {% if user.is_authenticated and user.is_staff %}
+    {% if user.is_authenticated %}
         <ul id="user-tools">
         	<li class="user-options-container collapse closed">
                 Welcome <a href="javascript://" class="user-options-handler collapse-handler">{% firstof user.first_name user.username %}</a>
@@ -28,7 +28,9 @@
         	{% block mainmenu %}
         	<!-- Main Menu -->
             <li><a href="/">Dashboard</a></li>
-            <li><a href="/admin/">Admin</a></li>
+            {% if user.is_staff %}
+            	<li><a href="/admin/">Admin</a></li>
+            {% endif %}
             {% endblock %}
             <!-- Username -->
             
