--- a/templates/platforms/weblogic/datasource.html
+++ b/templates/platforms/weblogic/datasource.html
@@ -7,6 +7,7 @@
 			<thead>
 				<tr>
 					<th>{% trans 'Name' %}</th>
+					<th>{% trans 'Driver Name' %}</th>
 					<th>{% trans 'User' %}</th>
 					<th>{% trans 'Min-Connections' %}</th>
 					<th>{% trans 'Max-Connections' %}</th>
@@ -17,6 +18,7 @@
 			<tbody>
 				<tr>
 					<td>{{datasource.name}}</td>
+					<td>{{datasource.driver_params.name}}</td>
 					<td>{{datasource.properties}}</td>
 					<td>{{datasource.pool_params.initial_capacity}}</td>
 					<td>{{datasource.pool_params.max_capacity}}</td>
