--- a/templates/widgets/agent/agentstree.html
+++ b/templates/widgets/agent/agentstree.html
@@ -61,7 +61,7 @@
 			onClick : function(node, event) {
 				logMsg("onClick(%o, %o)", node, event);
 				if (node.data.isFolder == false) {
-					getExecutionForm("execution-dialog", node.data.agent, node.data.key, "no-filter",  "response-container");	
+					getExecutionForm("{{settings.BASE_URL}}", "execution-dialog", node.data.agent, node.data.key, "no-filter",  "response-container");	
 				}
 			},
 			onDblClick : function(node, event) {
