--- a/templates/theme/kermit/header.html
+++ b/templates/theme/kermit/header.html
@@ -36,7 +36,7 @@
 			<ul class="user-options">
 				<li>
 					<a href="{{base_url}}/export/servers/csv/">{% trans 'All Servers (CSV)' %}</a>
-					<a href="{{base_url}}/export/servers/xls/">{% trans 'All Servers (XLS)' %}</a>
+					<!-- <a href="{{base_url}}/export/servers/xls/">{% trans 'All Servers (XLS)' %}</a>-->
 				</li>
 			</ul>
 		</li>
