--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -13,7 +13,7 @@
 		<link href="{{STATIC_URL}}css/kermit/base.css" rel="stylesheet" type="text/css" />
 		<link href="{{STATIC_URL}}css/kermit/jquery-ui-grappelli-extensions.css" rel="stylesheet" type="text/css" />
 		<link href="{{STATIC_URL}}css/kermit/loader.css" rel="stylesheet" type="text/css" />
-		<link href="{{STATIC_URL}}css/kermit/jquery-ui-1.8.15.custom.css" rel="stylesheet" type="text/css" />
+		<link href="{{STATIC_URL}}css/kermit/jquery-ui-1.8.15.custom.css" rel="stylesheet" type="text/css" />	 
 		
 		<!-- DynaTree -->
 		<link href="{{STATIC_URL}}css/dynatree/kermit/ui.dynatree.css" rel="stylesheet" type="text/css">
@@ -22,6 +22,10 @@
 		<!-- JQuery Context Menu -->
 		<link href="{{STATIC_URL}}css/jeegoocontext/style.css" rel="stylesheet" type="text/css" />
 		<link href="{{STATIC_URL}}css/jeegoocontext/skins/cm_default/style.css" rel="Stylesheet" type="text/css" />
+		
+		<!-- DataTable -->
+		<link href="{{STATIC_URL}}css/datatable/demo_page.css" rel="stylesheet" type="text/css" />
+		<link href="{{STATIC_URL}}css/datatable/demo_table.css" rel="stylesheet" type="text/css" />
 		
 		<!-- Collapsible Panel-->
 		<link href="{{STATIC_URL}}css/jquery-collapsible-panel/diQuery-collapsiblePanel.css" rel="Stylesheet" type="text/css" />
@@ -42,7 +46,8 @@
 		<script type="text/javascript" src="{{STATIC_URL}}js/jeegoocontext/jquery.jeegoocontext.js"></script>
 		<!-- Collapsible Panel-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-collapsible-panel/diQuery-collapsiblePanel.js"></script>
-		
+		<!-- DataTable -->
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-datatable/jquery.dataTables.min.js"></script>
 		<!-- Kermit Scripts-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/kermit/kermit.js"></script>
 		<script>
