--- a/templates/widgets/serverstatus/serverstatus.html
+++ b/templates/widgets/serverstatus/serverstatus.html
@@ -1,6 +1,13 @@
 {% extends "widgets/base_widget.html" %}
 
 {% block widget-content %}
+
+<script type="text/javascript">
+	$(document).ready(function() {
+		$('#serverstatustable').dataTable();
+	} );
+</script>
+
 <style type="text/css">
 table.serverstatus {
 	border-width: 2px;
@@ -29,7 +36,7 @@ table.serverstatus tr.odd {
 </style>
 <br/>
 <div id="actual-server-status">
-	<table class="serverstatus">
+	<table id="serverstatustable" class="serverstatus">
 		<thead>
 			<th width="60px">Online</th>
 			<th>Hostname</th>
